# Pareto_optimal

./: LICENSE  pyproject.toml
src/: main.py
src/functions/: dominates.py
