[build-system]
requires = ["setuptools>=61.0", "wheel==0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pareto_frontier"
version = "0.0.1"
authors = [
  { name="Dorus Boogaard", email="dorus.boogaard@outlook.com" },
]
description = "a package that plots the Pareto fronts."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib""
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dorus-coder/Pareto_optimal"


[tools.setuptools.packages]
find = {}

[project.scripts]
ppo = "layoutenv.cli_scripts:PPO"






